Add README documentation and notification fixes

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "firepassmanager"
-  }
+    "default": "firepassmanager-fcaa4"
+  },
+  "targets": {},
+  "etags": {}
 }
